data/all_generated_tests/raw_wast_tests/block_TypeMismatchinControlFlowInstructions_2567.wast
;; 8. **Test Description**:    Implement a `block` with implicit label assumptions where the operand types at the branch destination do not match the block's expected output types, ensuring a type error is generated.    **Constraint:** Validating implicit label type matching.    **Relation to Type Mismatch:** Checks type handling when jumping to labeled instructions.

(assert_invalid
  (module
    (func $type-mismatched-implicit-label (result i64)
      (block (result i32)
        (i64.const 42)
        (br 0)
      )
    )
  )
  "type mismatch"
)